<resources>
    <string name="app_name">MyTasks</string>
    <string name="developed_by">Developed by:</string>
    <string name="description">A convenient application for planning your cases and tasks!</string>
    <string name="about">About</string>
    <string name="close">close</string>
    <string name="day">day</string>
    <string name="night">night</string>
    <string name="evening">evening</string>
    <string name="morning">morning</string>
    <string name="goodLuck">good luck in the next day!</string>
    <string name="noData">No tasks lists!</string>
    <string name="actions">Actions</string>
    <string name="deleteAll">Delete all</string>
    <string name="createList">Create task list</string>
    <string name="menu">menu</string>
    <string name="withoutTag">Without tag.</string>
    <string name="greenTag">Not in a hurry.</string>
    <string name="yellowTag">Dont forget!</string>
    <string name="redTag">!Important and urgent!</string>
    <string name="quit">quit</string>
    <string name="enterName">enter task list name</string>
    <string name="enterDescription">enter task list description</string>
    <string name="symbols">symbols</string>
    <string name="symbols2">symbols: 0/2000</string>
    <string name="selectImportance">select importance tag</string>
    <string name="dateComplete">select date when your task list must completed</string>
    <string name="dateWarning">⚠️WARNING:Your task list will be deleted at the end of the deadline.</string>
    <string name="addedTasks">added tasks: 0</string>
    <string name="addedTasks2">added tasks</string>
    <string name="enterContent">enter task content</string>
    <string name="create">create</string>
    <string name="listCreated">Task list created!</string>
    <string name="listCleared">Task list cleared!</string>
    <string name="notEmpty">Task cannot be empty❗</string>
    <string name="insufficientData">Insufficient data!</string>
    <string name="errorMessage">Insufficient data! Please, fill all parameters needed for tasks list creation.</string>
    <string name="remarks">Remarks:</string>
    <string name="err1">Name of tasks list is empty!</string>
    <string name="err2">Description of tasks list is empty!</string>
    <string name="err3">Added tasks not found!</string>
    <string name="err4">Time to complete the task list should not be less than 1 day!</string>
    <string name="err5">Date of the task list must completed cannot be past!</string>
    <string name="ok">Ok</string>
    <string name="creation">create task list📋</string>
    <string name="count">tasks:</string>
    <string name="phrase1">Dont forget about your business and tasks!😉</string>
    <string name="phrase2">Remember! So far, the outstanding task lists are deleted on the date when they should be completed.😔</string>
    <string name="phrase3">Are you sure you havent forgotten anything? Check it out!😉</string>
    <string name="phrase4">Youve done your job, walk boldly!🚶</string>
    <string name="phrase5">Have you not forgotten about your plans?😉</string>
    <string name="completed">Completed:</string>
    <string name="notCompleted">Not completed:</string>
    <string name="lists">task lists</string>
    <string name="wantDeleteAll">Do you want delete all?</string>
    <string name="allDeleted">All task lists deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletedList">task lists that were not completed on time have been deleted!</string>
    <string name="deleteThis">Do you want delete this task list?</string>
    <string name="thisListDeleted">Task list deleted</string>
    <string name="thisWillBeDeleted">This tasks list will be deleted</string>
    <string name="allWillBeDeleted">All task lists will be deleted</string>
</resources>