<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateTaskListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_sky"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/backToMenu"
                android:background="@color/dark_sky"
                app:srcCompat="?attr/homeAsUpIndicator"
                app:tint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:text="@string/creation"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/taskListName"
                android:singleLine="true"
                android:hint="@string/enterName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="textMultiLine"
                android:id="@+id/taskListDescription"
                android:maxLength="2000"
                android:hint="@string/enterDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symbols2"
                android:textColor="@color/grass"
                android:id="@+id/symbolsCounter"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@drawable/sky_square_border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selectImportance"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/selectTag"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/sky_square_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dateComplete"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"/>

                <DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/datePicker"
                    android:layout_margin="10dp"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/red"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/dateWarning"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/taskCounter"
                    android:textColor="@color/white"
                    android:background="@drawable/sky_square_border"
                    android:backgroundTint="@color/sky"
                    android:text="@string/addedTasks"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/sky_square_border">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/addedTasksView"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="12dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sky_square_border"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:id="@+id/taskContent"
                    android:layout_weight="3"
                    android:maxLength="1000"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/enterContent"/>

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@color/grass"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/addTask"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@android:drawable/ic_input_add"
                    app:tint="@color/white" />

            </LinearLayout>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/red"
                android:id="@+id/clearTaskList"
                app:srcCompat="@android:drawable/ic_menu_delete" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lime"
                android:id="@+id/createTaskList"
                android:text="@string/create"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>